logo fix on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ header .logo {
   margin: 1.5rem 0;
   position: relative;
 }
-header .logo a > img {
+.logo-img {
   width: 160px;
   height: fit-content;
   object-fit: cover;
